--- a/analysis/MTB_Expression_Analysis.Rmd
+++ b/analysis/MTB_Expression_Analysis.Rmd
@@ -25,26 +25,29 @@ knitr::read_chunk("chunks.R")
 ```
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE,eval=FALSE)
+knitr::opts_chunk$set(echo = TRUE,eval=TRUE)
 ```
 
 <!-- Add your analysis here -->
 
 ## Construction of Z-scores
 
-For each bacterial infection at certain timepoint, we have six controls and six treatments, denoted as $X_1,X_2,X_3,X_4,X_5,X_6$ and $Y_1,Y_2,Y_3,Y_4,Y_5,Y_6$. Then the estimated effect size and variance are defined below:
+For each bacterial infection at certain timepoint, we have six controls and six treatments, denoted as $X_1,X_2,X_3,X_4,X_5,X_6$ and $Y_1,Y_2,Y_3,Y_4,Y_5,Y_6$. Then the estimated effect size and standard error are defined below:
 $$
 \hat\beta = \bar Y-\bar X; \\
 \hat s = \sqrt{\hat\sigma_x^2/6+\hat\sigma_y^2/6.}
 $$
 Here $\bar X$, $\bar Y$ are sample means, and $\hat\sigma_x$, $\hat\sigma_y$ are sample 
-variances.
+variances. Then we have
+$$
+\hat\beta|\hat s\sim N(\beta,\hat s^2).
+$$
 
 ## Motifs
 
 At 18 hours post-infection, There are eight bacterial infections: "Rv.18", "Rv+.18", "GC.18", "BCG.18", "Smeg.18", "Yers.18", "Salm.18", "Staph.18". Here we set $K=5$, the same like [Blischak, et al, 2015](https://www.nature.com/articles/srep16882). The motifs are shown below. 
 
-```{r}
+```{r,cache=TRUE}
 source('../code/function.R')
 betahat = read.table("../data/betahat.txt", header = TRUE, sep = "\t",
                stringsAsFactors = FALSE)
@@ -62,10 +65,11 @@ Download the 198 response eQTLs from [Barreiro et al, 2012](https://www.ncbi.nlm
 dat_cpm <- read.table("../data/table-s1.txt", header = TRUE, sep = "\t",
                       stringsAsFactors = FALSE)
 # The first two columns are gene information
-rownames(dat_cpm) <- dat_cpm$id
 gene_names <- dat_cpm$name
 names(gene_names) <- dat_cpm$id
 
+S3 = read.csv("../data/S3.csv",
+              header = FALSE,stringsAsFactors = FALSE)
 id = rownames(dat_cpm)
 lfsr18 = z18_k5$lfsr[[1]][,1] 
 list = id[lfsr18<0.01]
