--- a/analysis/MTB_Expression_Analysis.Rmd
+++ b/analysis/MTB_Expression_Analysis.Rmd
@@ -45,7 +45,7 @@ $$
 
 ## Motifs
 
-At 18 hours post-infection, There are eight bacterial infections: "Rv.18", "Rv+.18", "GC.18", "BCG.18", "Smeg.18", "Yers.18", "Salm.18", "Staph.18". Here we set $K=5$, the same like [Blischak, et al, 2015](https://www.nature.com/articles/srep16882). The motifs are shown below. 
+At 18 hours post-infection, There are eight bacterial infections: "Rv.18", "Rv+.18", "GC.18", "BCG.18", "Smeg.18", "Yers.18", "Salm.18", "Staph.18". Here we set $K=5$, the same as [Blischak et al, 2015](https://www.nature.com/articles/srep16882). The learned motifs are shown below. 
 
 ```{r,cache=TRUE}
 source('../code/function.R')
@@ -68,9 +68,9 @@ dat_cpm <- read.table("../data/table-s1.txt", header = TRUE, sep = "\t",
 gene_names <- dat_cpm$name
 names(gene_names) <- dat_cpm$id
 
-S3 = read.csv("../data/S3.csv",
-              header = FALSE,stringsAsFactors = FALSE)
-id = rownames(dat_cpm)
+S3 = read.csv("../data/S3.csv",header = FALSE,stringsAsFactors = FALSE)
+id = names(gene_names)
+ll = intersect(S3[,2],id)
 lfsr18 = z18_k5$lfsr[[1]][,1] 
 list = id[lfsr18<0.01]
 a = intersect(S3[,2],list)
