--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -9,6 +9,7 @@ output:
 
 1. [Simulation for generic cormotif model](Simulation_generic_Cormotif.html)
 2. [Analysis for the trend of loglike](Trend_of_loglike.html)
-3. [estimation of effect sizes and detection of significant effects](estimation_of_effect_size.html)
+3. [Estimation of effect sizes and detection of significant effects](estimation_of_effect_size.html)
+4. [MTB Expression Analysis](MTB_Expression_Analysis.html)
 4. [Simulation work based on original cormotif](Simulation.html)
 
